Fix spacing between small.error and select elements.

--- a/marketpulse/base/static/css/app.css
+++ b/marketpulse/base/static/css/app.css
@@ -247,6 +247,9 @@ small.error {
     left: 0px;
 }
 
+select.form-control + small.error {
+    top: 0px;
+}
 
 /* Activities
 ==================== */
